--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
     head
         link(rel="stylesheet", href="/static/styles.css")
-        title Mindtube
+        title Document
     body 
         header
             a.app-title(href="/") HR 
