--- a/views/create.pug
+++ b/views/create.pug
@@ -10,4 +10,6 @@ block content
 
         textarea(name="about", rows="6")     
 
+        input(type="hidden" name="hired" value="false")     
+
         button Submit
