--- a/views/employee.pug
+++ b/views/employee.pug
@@ -6,3 +6,5 @@ block content
     p= employee.date  
     p= employee.experience  
     p= employee.about  
+
+    a(href="/employees/" + employee.id + "/hire") Hire 
