--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,5 +8,6 @@ html(lang="en")
             a.app-title(href="/") HR 
         nav 
             a.nav-items(href="/employees") All Employees 
+            a.nav-items(href="/hired") Hired Employees
         
         block content
