--- a/views/home.pug
+++ b/views/home.pug
@@ -1,5 +1,8 @@
 extends layout.pug 
 
 block content 
-    h1 hello world 
-    a(href="/create") Create
+    .home-container 
+        h1.home-title Human Resources Application
+        a.create-btn(href="/create") Create
+    
+    p.web This web application was created to fulﬁll Web Technology module’s requirements and does not represent an actual company or service
